--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@airstack/airstack-react": "^0.4.4",
-    "@rainbow-me/rainbowkit": "^1.0.6",
-    "@web3modal/ethereum": "^2.7.0",
-    "@web3modal/react": "^2.7.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "import": "^0.0.6",
-    "next": "^13.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "viem": "^1.3.1",
-    "wagmi": "^1.3.9"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@airstack/airstack-react": "^0.4.4",
+        "@rainbow-me/rainbowkit": "^1.0.6",
+        "@web3modal/ethereum": "^2.7.0",
+        "@web3modal/react": "^2.7.0",
+        "eslint": "8.45.0",
+        "eslint-config-next": "13.4.10",
+        "ethers": "^5.7.2",
+        "import": "^0.0.6",
+        "next": "^13.4.3",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "viem": "^1.3.1",
+        "wagmi": "^1.3.9"
+    }
 }
